# ALP_GPU

./: .gitignore  CMakeLists.txt  README.md
ALP/: CMakeLists.txt
ALP/ALP_src/: CmakeLists.txt
ALP/ALP_src/alp_lib/: CmakeLists.txt
ALP/ALP_src/alp_lib/src/: CMakeLists.txt
ALP/include/alp/: decoder.hpp  encoder.hpp  rd.hpp
ALP/src/: falp.cpp
examples/: compare_main.cpp
include/: alp_c.h  alp_gpu.hpp  compare_utils.hpp
src/: alp_gpu copy.cu  alp_gpu.cu  alp_gpu_hybrid.cu
src/gpu/: alp_gpu copy.cu  alp_gpu.cu
